Remove shifted-icon; no longer needed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,20 +4,10 @@
   text-align: left;
 }
 
-.shifted-icon {
-  position: relative;
-  top: -5px;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
-
-.shifted-icon {
-  position: relative;
-  top: -5px;
 }
 
 .ant-page-header {
